# TestWork001

./: .gitignore
transaction_project/: .env  README.md  docker-compose.yml  pyproject.toml
transaction_project/app/: .dockerignore  Dockerfile  config.py  db.py  main.py  models.py  repos.py  requirements.txt  router.py  schemas.py  service.py  tasks.py
transaction_project/app/scripts/: create_db_tables.py
transaction_project/tests/: test_transaction.py
