[tool.poetry]
name = "transaction-app"
version = "0.0.1"
description = "Тестовое задание: разработка микросервиса для управления транзакциями"
authors = ["Naropongi <35216003+naropongi@users.noreply.github.com>"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.3.1"
aiosqlite = "^0.20.0"
uvicorn = "^0.30.3"
celery = {extras = ["redis"], version = "^5.4.0"}
asyncpg = "^0.29.0"
coverage = "^7.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
omit = [
    "*/.vscode/*",
    "*__init__.py",
    ]
